# yunxing-tutorial

./: .gitignore  README.md  pyproject.toml
.yunxing/: config.local.example.yaml
app/: broker.py  config.py  db.py  dedup.py  main.py  models.py  security.py  tally.py  templating.py
app/routes/: admin.py  polls.py  results.py
static/: app.css
templates/: _admin_view.html  _ballot_form.html  _ballot_multiple.html  _ballot_ranking.html  _ballot_region.html  _ballot_scoring.html  _ballot_single.html  _poll_state.html  _result_rows.html  _results.html  _vote_error.html  _voted.html  admin.html  base.html  create.html  created.html  poll.html
tests/: conftest.py  test_admin.py  test_create.py  test_dedup.py  test_lifecycle.py  test_models.py  test_results.py  test_scaffold.py  test_tally.py  test_vote.py
